add downstream api
